moved overette.less to src

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -1,6 +1,6 @@
 <html>
 
-<link rel="stylesheet/less" type="text/css" href="../lib/overette.less">
+<link rel="stylesheet/less" type="text/css" href="../src/overette.less">
 <style type="text/css">body{ background: #d8dee4; }</style>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
